# django_xworkflows

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README  README.rst  dev_requirements.txt  dev_requirements_django1.10.txt  dev_requirements_django1.9.txt  manage.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  test.yml
dev/: README  settings.py  urls.py
django_xworkflows/: __init__.py  compat.py  models.py
django_xworkflows/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
django_xworkflows/management/commands/: graph_transitions.py  rebuild_transitionlog_states.py
django_xworkflows/xworkflow_log/: admin.py  models.py
django_xworkflows/xworkflow_log/locale/fr_FR/LC_MESSAGES/: django.po
django_xworkflows/xworkflow_log/migrations/: 0001_add_transitionlog.py  0001_initial.py  0002_add_transitionlog_fromstate.py  0003_add_transitionlog_tostate.py
django_xworkflows/xworkflow_log/south_migrations/: 0004_add_indexes.py
doc/: changelog.rst  conf.py  django.rst  fix_django_settings.py  index.rst  internals.rst  models.rst  xworkflow_log.rst
docs/: Makefile  changelog.rst  conf.py  index.rst  internals.rst
migration_helper/: manage.py  settings.py
src/django_xworkflows/: __init__.py  admin.py  models.py
src/django_xworkflows/locale/fr_FR/LC_MESSAGES/: django.po
src/django_xworkflows/management/commands/: rebuild_transitionlog_states.py  render_workflow.py
src/django_xworkflows/xworkflow_log/: admin.py  models.py
src/django_xworkflows/xworkflow_log/migrations/: 0001_add_transitionlog.py  0003_add_transitionlog_tostate.py  0004_add_indexes.py
tests/: __init__.py  runner.py  settings.py
tests/demo_project/demo_project/: settings.py  urls.py  wsgi.py
tests/demo_project/workflow_app/: models.py  tests.py
tests/djworkflows/: __init__.py  models.py  tests.py
tests/djworkflows/migrations/: 0001_initial.py
(+1 files in other folders)
