[metadata]
name = django_xworkflows
version = 1.0.1.dev0
description = A Django app enabling Django models to use xworkflows.
long_description = file: README.rst
# https://docutils.sourceforge.io/FAQ.html#what-s-the-official-mime-type-for-restructuredtext-data
long_description_content_type = text/x-rst
author = Raphaël Barrois
author_email = raphael.barrois+django_xworkflows@polytechnique.org
url = https://github.com/rbarrois/django_xworkflows
keywords = django, workflow, state machine, automaton
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = >=3.4
install_requires =
    Django>=1.11
    xworkflows

[options.packages.find]
exclude =
    dev
    tests*

[options.extras_require]
dev =
    # Testing
    coverage
    check_manifest
    flake8
    tox
    # Packaging
    wheel
    zest.releaser[recommended]
doc =
    Sphinx
    sphinx_rtd_theme

[bdist_wheel]
universal = true

[zest.releaser]
; semver-style versions
version-levels = 3

; Version flag location (we use __version__)
python-file-with-version = django_xworkflows/__init__.py

[distutils]
index-servers = pypi

[flake8]
# Ignore "and" at start of line.
ignore = W503
max-line-length = 120
